User Account Create

--- a/css/landing.css
+++ b/css/landing.css
@@ -133,3 +133,7 @@ background-size: cover;
 .form-control {
     width:400px !important;
 }
+
+.p {
+  font-family: Gotham Medium, system, sans serif;
+}
