--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -3,7 +3,164 @@
 #map {
   height: 100%;
 }
-
+#map_container{
+	margin-top: 2%;
+	margin-bottom: 1%;
+}
 #carsNear{
 	text-align: center;
+}
+
+
+#new-button {
+  background-color: transparent;
+  color: #7d7d7d;
+  border: 2px solid white;
+  text-align: center;
+
+  }
+
+
+.navbar{
+	background-color: transparent !important;
+}
+#new-button:hover {
+  background-color: #e7e7e7;
+  opacity: 0.8;}
+
+#new-button2 {
+  background-color: transparent;
+  color: #7d7d7d;
+  border: 2px solid #7d7d7d;
+  text-align: center;
+
+  }
+
+  #new-button2:hover {
+  background-color: #e7e7e7;
+  opacity: 0.8;}
+
+.page-title{
+    display:inline-block;
+    padding-left:10px;
+    font-size:28px;
+}
+
+/* Add some content at the middle of the video/page */
+.content {
+  position: relative;
+  width: 100%;
+  text-align: center;
+  color: #7d7d7d;
+  width: 100%;
+  padding-top: 10%;
+}
+
+.content2 {
+  position: relative;
+  width: 100%;
+  text-align: center;
+  color: #7d7d7d;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 2%;
+}
+
+.content3 {
+  position: flex;
+  width: 100%;
+  text-align: center;
+    justify-content: center;
+  align-items: center;
+  color: #7d7d7d;
+  width: 100%;
+}
+
+.content4 {
+  position: relative;
+  width: 100%;
+  text-align: left;
+  color: #f1f1f1;
+  width: 100%;
+  padding-top: 10%;
+  padding-bottom: 10%;
+  padding-right: 20%;
+  padding-left: 20%;
+}
+
+.content5 {
+  position: relative;
+  width: 100%;
+  text-align: center;
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
+}
+
+
+.profile-container {
+    margin-top:30px;
+}
+
+.pic{
+    width: 819px;
+    height: 420px;
+    border-radius: 10px;
+}
+
+.pic2{
+    width: 100%;
+    border-radius: 10px;
+}
+
+.profile{
+    position: relative;
+    display: inline;
+    margin-left: auto;
+    margin-right: auto;
+    color:#7d7d7d;
+    text-align: center;
+    font-weight:400;
+}
+
+
+.form-control {
+    width:400px !important;
+}
+
+p {
+  color: #7d7d7d;
+}
+
+hr {
+    display: relative;
+    height: 2px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.arrow {
+  box-sizing: border-box;
+  height: 2vw;
+  width: 2vw;
+  border-style: solid;
+  display:inline-block;
+  border-color: #7d7d7d;
+  border-width: 0px 1px 1px 0px;
+  justify-content: center;
+  align-items: center;
+  transform: rotate(45deg);
+  transition: border-width 150ms ease-in-out;
+}
+
+.arrow:hover {
+  border-bottom-width: 4px;
+  border-right-width: 4px;
+}
+
+h3
+{
+  color: #7d7d7d;
 }
