--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -22,7 +22,7 @@
 
 
 .navbar{
-	background-color: transparent !important;
+	background-color: white !important;
 }
 #new-button:hover {
   background-color: #e7e7e7;
@@ -52,10 +52,18 @@
   width: 100%;
   text-align: center;
   color: #7d7d7d;
-  width: 100%;
+  padding-left:10px;
+  padding-right:10px;
   padding-top: 10%;
 }
-
+@media (max-width: 550px){
+  .content{
+    padding-top:20%;
+  }
+  .content p {
+    font-size:14px;
+  }
+}
 .content2 {
   position: relative;
   width: 100%;
@@ -163,4 +171,8 @@ hr {
 h3
 {
   color: #7d7d7d;
+}
+
+.form-cont{
+  margin:0;
 }
