--- a/css/landing.css
+++ b/css/landing.css
@@ -11,6 +11,11 @@ html {
   min-height: 100%;
 }
 
+@media (max-width:550px){
+  .content{
+    margin-top:15% !important;
+  }
+}
 /* Add some content at the middle of the video/page */
 .content {
   position: relative;
@@ -68,12 +73,20 @@ html {
     padding-left:10px;
     font-size:28px;
 }
+.btn{
+  margin-left:3px;
 
+}
 .navbar{
     background-color: transparent !important;
+    transition: background-color .3s linear;
 }
+.navbar.scrolled{
+  background-color: black !important;
 }
-
+.page-title.scrolled2{
+  color:white;
+}
 .navbar-brand{
     opacity: 1;
 }
@@ -100,7 +113,7 @@ background-size: cover;
 #new-button {
   background-color: transparent;
   color: white;
-  border: 2px solid #e7e7e7;'
+  border: 2px solid #e7e7e7;
   }
 
 #new-button:hover {
