--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,5 +1,8 @@
 /* Always set the map height explicitly to define the size of the div
  * element that contains the map. */
+ html{
+  scroll-behavior: smooth;
+ }
 #map {
   height: 100%;
 }
