--- a/css/owner.css
+++ b/css/owner.css
@@ -80,7 +80,7 @@ html {
 .navbar{
     background-color: white !important;
 }
-}
+
 
 .navbar-brand{
     opacity: 1;
@@ -135,8 +135,8 @@ background-size: cover;
 }
 
 .pic{
-    width: 819px;
-    height: 420px;
+    width: 100%;
+    
     border-radius: 10px;
 }
 
@@ -155,6 +155,9 @@ background-size: cover;
     font-weight:400;
 }
 
+.form-cont{
+  margin:0;
+}
 
 .form-control {
     width:400px !important;
