--- a/css/create-new-account.css
+++ b/css/create-new-account.css
@@ -1,5 +1,5 @@
         body {
-        background-color: #F3EBF6;
+        background-color: #F0F0F0;
         font-family: 'Ubuntu', sans-serif;
     }
     
@@ -14,9 +14,9 @@
     
     .sign {
         padding-top: 40px;
-        color: #8C55AA;
-        font-family: 'Ubuntu', sans-serif;
-        font-weight: bold;
+        color: #7d7d7d;
+        font-family: 'Helvetica', sans-serif;
+        font-weight: 100;
         font-size: 23px;
     }
     
@@ -41,7 +41,7 @@
     }
     
     form.form1 {
-        padding-top: 26px;
+        padding-top: 40px;
     }
     
     .pass {
@@ -72,9 +72,10 @@
     
     .submit {
       cursor: pointer;
+      
         border-radius: 5em;
         color: #fff;
-        background: linear-gradient(to right, #9C27B0, #E040FB);
+        background-color: black;
         border: 0;
         padding-left: 40px;
         padding-right: 40px;
@@ -90,14 +91,21 @@
         text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
         color: #E1BEE7;
         padding-top: 15px;
+        margin-top: 30px;
     }
     
     a {
         text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
-        color: #E1BEE7;
-        text-decoration: none
+        color: #7d7d7d;
+        text-decoration: none;
+        font-weight:100;
+        font-family:Helvetica;
+
     }
     
+    a:hover{
+        text-decoration: underline;
+    }
     @media (max-width: 600px) {
         .main {
             border-radius: 0px;
